--- a/Something/타입스크립트/이펙티브_타입스크립트/1장/1.md
+++ b/Something/타입스크립트/이펙티브_타입스크립트/1장/1.md
@@ -28,3 +28,55 @@ function greet(who: string) {
 
 타입 시스템의 목표 중 하나는 런타임에 오류를 발생시킬 코드를 미리 찾아내는 것입니다.
 타입스크립트가 '정적'타입 시스템이라는 것은 바로 이런 특징을 말하는 것입니다.
+
+그러나 타입 체커가 모든 오류를 찾아내지는 않습니다.
+
+오류가 발생하지는 않지만 의도와 다르게 동작하는 코드도 있습니다
+
+```javascript
+const states = [
+  { name: "Alabama", capital: "Montgomery" },
+  { name: "Alaska", capital: "Juneau" },
+  { name: "Arizona", capital: "Phoenix" },
+];
+
+for (const state of states) {
+  console.log(state.capitol);
+}
+
+// undefined
+// undefined
+// undefined
+// undefined
+```
+
+앞의 코드는 유효한 자바스크립트(또한 타입스크립트)이며 어떠한 오류도 없이 실행됩니다.
+그러나 루프 내의 state.capitol은 의도한 코드가 아닌 게 분명합니다.
+
+이런 경우는 타입스크립트 타입 체커는 추가적인 타입 구문 없이도 오류를 보여준다.
+
+타입스크립트는 타입 구문 없이도 오류를 잡을 수 있지만, 타입 구문을 추가한다면 훨씬 더 많은 오류를 찾아낼 수 있습니다.
+오류의 원인을 추측할 수는 있지만 항상 정확하지 않기 때문입니다.
+
+`따라서 명시적으로 states를 선언하여 의도를 분명하게 하는 것이 좋습니다`
+
+```typescript
+interface State {
+  name: string;
+  capital: string;
+}
+
+const state: State[] = [
+  { name: "Alabama", capitol: "Montgomery" },
+  { name: "Alaska", capitol: "Juneau" },
+  { name: "Arizona", capitol: "Phoenix" },
+];
+// 'State' 형식에 'capitol'이 없다고 경고하며, 'capital'을 추천
+```
+
+또한 타입스크립트 타입 시스템은 자바스크립트의 런타임 동작을 '모델링'합니다.
+
+## 되짚어 볼 점
+
+- 타입스크립트는 자바스크립트 런타임 동작을 모델링하는 타입 시스템을 가지고 있기 때문에 런타임 오류를 발생시키는 코드를 찾아내려고 합니다.
+  그러나 모든 오류를 찾아내리라 기대하면 안 됩니다. 타입 체커를 통과하면서도 런타임 오류를 발생시키는 코드는 충분히 존재할 수 있습니다.
