feat: learn cleanCode for javascript

--- a/Something/클린코드/02.변수다루기.md
+++ b/Something/클린코드/02.변수다루기.md
@@ -177,3 +177,20 @@ setTimeout(() => {
 
 호이스팅이란 무엇일까요?
 간단하게 말하자면 선언과 할당이 분리된 것을 뜻합니다.
+
+```javascript
+function duplicatedVar() {
+  console.log(a); // undefined
+
+  var a;
+
+  console.log(a); // undefined
+
+  var a = 100;
+
+  console.log(a); // 100
+}
+```
+
+런타임시에 바로 선언이 최상단으로 끌어올려지는 것이죠
+이 부분으로 인해 코드를 작성할 때 예측하지 못한 결과가 나올수가 있는 겁니다.
